// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClusterListFilter /> renders correctly 1`] = `
<TextInput
  aria-label="Filter"
  className="cluster-list-filter"
  data-testid="filterInputClusterList"
  onChange={[Function]}
  placeholder="Filter by name or ID..."
  type="text"
  value=""
/>
`;

exports[`<ClusterListFilter /> renders correctly 2`] = `
<TextInput
  aria-label="Filter"
  className="cluster-list-filter"
  data-testid="filterInputClusterList"
  onChange={[Function]}
  placeholder="Filter by name or ID..."
  type="text"
  value="hello"
/>
`;
